styles.css
* {
	margin: 0;
	padding: 0;
	vertical-align: inherit;
	font-size: inherit;
	line-height: inherit;
	font-weight: inherit;
	font-style: inherit;
	font-family: inherit;
	text-align: inherit;
	text-decoration: inherit;
	color: inherit;
	background-color: transparent;
}

*:not(select):not(input){
	border: 0;
}

body.clicked :not(input):not(select):focus,
body.clicked :not(input):not(select):active{
	outline: none;
	text-decoration: none;
}

html {
	font-size: 16px;
	-webkit-text-size-adjust: 100%;
}

body {
	font-size: 1rem;
	line-height: 1.5rem;
	font-weight: 400;
	font-style: normal;
	vertical-align: top;
	font-family: 'Roboto Condensed', sans-serif;
	text-align: left;
	text-decoration: none;
	color: #333;
	background-color: #FDB70F;
}

strong{
	font-weight: 800;
}

em{
	font-style: italic;
}

.noSelect,
.noSelect * {
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-webkit-user-drag: none;
	user-drag: none;
}

.app, .container{
	min-height: 100vh;
}

.container{
	position: relative;
	background-color: #fff;
}

header{
	background-color: #000;
}
header nav ul{
	display: flex;
	flex-flow: row wrap;
	padding: 0.5rem;
}
header nav ul li{
	display: block;
	width: 50%;
}
header nav ul li a {
	display: block;
	text-align: center;
	font-size: 2rem;
	font-weight: 800;
	line-height: 3rem;
	border-radius: 1rem;
	border: 2px solid #FDB70F;
	background-color: #000;
	margin: 0.5rem;
	color: #FDB70F;
}
header nav ul li a.router-link-exact-active{
	background-color: #FDB70F;
	color: #000;
}

.content{
	padding: 1rem;
}

h1, h2, h3{
	padding-bottom: 0.5rem;
}
h1{
	font-size: 2rem;
	line-height: 3rem;
	font-weight: 800;
}
h2{
	font-size: 1.5rem;
	line-height: 3rem;
	font-weight: 800;
}
h3{
	font-size: 1.1rem;
	line-height: 2rem;
	font-weight: 800;
}
h4{
	font-weight: 800;
}
p{
	padding-bottom: 1rem;
}
a{
	color: #FDB70F;
	font-weight: bold;
}
a:link{
	text-decoration: underline;
}

.symbol{
	display: inline-block;
	width: 1rem;
	height: 1rem;
	background-image: url('content/symbols.svg');
	background-size: 6rem 1rem;
	background-position: top left;
	vertical-align: text-top;
}
.symbol.uncheck{
	background-position-x: 0;
}
.symbol.check{
	background-position-x: -1rem;
}
.symbol.link{
	background-position-x: -2rem;
}
.symbol.Current{
	background-position-x: -3rem;
}
.symbol.Retiring{
	background-position-x: -4rem;
}
.symbol.Retired{
	background-position-x: -5rem;
}

.sort-filter{
	display: block;
}
.sort-filter .category-list{
	width: 100%;
}
.sort-filter .status-list,
.sort-filter .sort-list{
	flex: 1;
}
.sort-filter .item{
	display: block;
	cursor: pointer;
	font-weight: 600;
	font-size: 0.875rem;
}
.sort-filter .flex-list li a{
	display: block;
	width: 100%;
}

.status-list ul{
	display: block;
	padding: 0.5rem;
}
.status-list li {
	display: block;
}
.status-list a{
	color: #000;
}
.status-Current, .status-Current *{ color: #369; }
.status-Retiring, .status-Retiring *{ color: #f90; }
.status-Retired, .status-Retired *{ color: #900; }

.flex-list{
	display: flex;
	flex-flow: row wrap;
	padding: 0.5rem;
}

.flex-list li{
	flex: 1 50%;
	max-width: 50%;
	display: flex;
}

.product-list .flex-list{
	padding: 0;
}

.product {
	display: block;
	flex-grow: 1;
	margin: 0.25rem;
	border: 1px solid rgba(0,0,0,0.25);
	border-radius: 0.25rem;
	font-size: 0.875rem;
	line-height: 1rem;
	color: #000;
	font-weight: 400;
}
.product > *,
.product .description > *,
.product .description > * > *{
	display: block;
}
.product .description{
	padding: 0.5rem;
}
.product .image{
	position: relative;
	padding-bottom: 100%;
	overflow: hidden;
}
.product .image .image-crop {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0.5rem;
	text-align: center;
}
.product .image img{
	position: absolute;
	left: 50%;
	top: 50%;
	height: 100%;
	width: auto;
	margin: 0 auto;
	-webkit-transform: translate(-50%,-50%);
	-ms-transform: translate(-50%,-50%);
	transform: translate(-50%,-50%);
}
.product .name{
	font-size: 1rem;
	line-height: 1.5rem;
	font-weight: 600;
}
.product .characters{
	white-space: pre-wrap;
}

.instock-true{ color: #090; }
.instock-false{ color: #900; }
.category-1{ color: #005879; }
.category-2{ color: #a0005f; }
.category-3{ color: #a08f00; }
.category-4{ color: #401082; }
.category-5{ color: #017739; }
.category-6{ color: #930308; }


.q{
	font-weight: 800;
}

.prices-table-holder{
	overflow: auto;
}

.prices-table{
	margin-bottom: 1rem;
	vertical-align: middle;
	border-spacing: 0px;
	border: 1px solid #bbb;
	border-width: 1px 0 0 1px;
}

.prices-table td,
.prices-table th{
	padding: 0.25rem 0.5rem;
	border: 1px solid #bbb;
	border-width: 0 1px 1px 0;
}

.prices-table thead th{
	background-color: #ddd;
	text-align: center;
}

.prices-table tbody th{
	background-color: #e7e7e7;
	text-align: right;
}

.prices-table .prices-good{
	background-color: #beb;
}

.prices-table .optional{
	background-color: #eee;
}


/* medium */
@media (min-width: 720px) {
	body{
		background-image: url('https://farm9.staticflickr.com/8455/8016622427_393bb70151_k_d.jpg');
		background-size: cover;
		background-position: center center;
		background-attachment: fixed;
	}
	.container{
		width: 640px;
		margin: 0 auto;
	}
	header nav ul li{
		width: auto;
		flex: 1;
	}
	.sort-filter{
		display: flex;
		flex-flow: row wrap;
	}
	.product-list .flex-list li{
		flex: 1 33.3333333%;
		max-width: 33.3333333%;
	}
}
/* large */
@media (min-width: 920px) {
	.container{
		width: 800px;
	}
	.sort-filter .category-list{
		flex: 2;
	}
	.product-list .flex-list li{
		flex: 1 25%;
		max-width: 25%;
	}
}
/* xlarge */
@media (min-width: 1020px) {
	.container{
		width: 960px;
	}
}

